2005-03-01  Not Zed  <NotZed@Ximian.com>

	* tests/misc/test2.c: fix the case of the charset specification,
	now we properly canonicalise them.

2005-02-28  Not Zed  <NotZed@Ximian.com>

	** See bug #72609

	* camel-mime-utils.c (header_encode_param): just call
	camel_charset_best once to get the best charset, and handle a NULL
	charset name case properly.

	* camel-charset-map.c (camel_charset_step): use the camel utf8
	functions for robustness (&fix possible buffer-read-overflow).
	Perform some short-circuit optimisation when we can.

2005-02-22  Not Zed  <NotZed@Ximian.com>

	** See bug #61468

	* providers/imap/camel-imap-folder.c (imap_update_summary): get rid of the stupid
	HEADER.FIELDS NOT() blah, it just caused more problems than it
	ever solved.

2005-02-01  Not Zed  <NotZed@Ximian.com>

	** See bug #72020.

	* camel-filter-driver.c (do_score): don't use
	camel_folder_set_message_user_tag anymore, use the messageinfo
	interface.
	(do_adjust_score): implement missing function.

2005-02-01  Not Zed  <NotZed@Ximian.com>

	** See bug #65329

	* camel-vtrash-folder.c (camel_vtrash_folder_new): api chagne and
	translate the short name.

	* camel-vee-folder.c (camel_vee_folder_construct): take full-name
	argument separately from short-name.
	(camel_vee_folder_new): calculate short-name.

2005-02-01  Not Zed  <NotZed@Ximian.com>

	** See bug #38791 and bug #36142.

	* camel-gpg-context.c (gpg_ctx_op_step): use poll rather than
	select, and listen to the cancellation fd as well.  perform all
	cancellation here.
	(gpg_sign): remove cancellation check/processing.
	(gpg_verify): same.
	(gpg_encrypt): same.
	(gpg_decrypt): same.
	(gpg_ctx_op_step): remove the messy execption handling stuff, it
	wasn't useful.
	(gpg_import_keys, gpg_export_keys): clean up exception case.

2005-01-31  Not Zed  <NotZed@Ximian.com>

	** See bug #70303.

	* tests/mime-filter/test1.c: added new test for
	camel-mime-filter-canon.c
